@@ -56,10 +56,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.0</version>
 				<configuration>
-					<argLine>--enable-preview -Djava.library.path=.</argLine>
-					<includes>
-						<include>**/*Benchmark.java</include>
-					</includes>
+					<argLine>--enable-native-access=arb4j --enable-preview -Djava.library.path=.</argLine>
 				</configuration>
 				<dependencies>
 					<dependency>
